<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Guitar beginner</string>
    <string name="My_songs">Песни</string>
    <string name="Search">Ноты</string>
    <string name="Tuner">Тюнер</string>
    <string name="Study">Обучение</string>
    <string name="Back">Назад</string>
    <string name="About_guitar">Что же такое гитара</string>
    <string name="Hands">Постановка рук</string>
    <string name="Chords">Простые аккорды</string>
    <string name="Chords2">Барэ</string>
    <string name="Beats">Бои</string>
    <string name="Bust">Перебор</string>
    <string name="guitar_info">Огромный текст про устройство гитары</string>
    <string name="All_chords">Аккорды</string>
    <string-array name="chord_list">
        <item>Am</item>
        <item>C</item>
        <item>Cm</item>
        <item>A</item>
        <item>G</item>
        <item>Dm</item>
    </string-array>
    <string name="Am">Аккорд Аm (Ля минор)</string>
    <string name="A">Аккорд A (Ля мажор)</string>
    <string name="Bm">Аккорд Bm (Си минор)</string>
    <string name="B">Аккорд B (Си мажор)</string>
    <string name="Cm">Аккорд Cm (До минор)</string>
    <string name="C">Аккорд C (До мажор)</string>
    <string name="Dm">Аккорд Dm (Рэ минор)</string>
    <string name="D">Аккорд D (Рэ мажор)</string>
    <string name="Em">Аккорд Em (Ми минор)</string>
    <string name="E">Аккорд E (Ми мажор)</string>
    <string name="Fm">Аккорд Fm (Фа минор)</string>
    <string name="F">Аккорд F (Фа мажор)</string>
    <string name="Gm">Аккорд Gm (Соль минор)</string>
    <string name="G">Аккорд G (Соль мажор)</string>
    <string name="am_chord_start">Аккорд Am на гитаре – это первый аккорд, который ставит начинающий гитарист.</string>
    <string name="am_chord_info1">
        Минорное трезвучие образуется из основного тона A,
        малой терции C и большой терции (чистой квинты от основного тона) E.
    </string>
    <string name="am_chord_info2">
        Аккорд состоит из трех звуков:\n
        \t \t Ля (A) - основной тон аккорда\n
        \t \t До (С) - малая терция\n
        \t \t Ми (E) - большая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="a_chord_start">Аккорд A чем-то похож на аккорд Am и в припевах песен его часто заменяют.</string>
    <string name="a_chord_info1">
        Мажорное трезвучие образуется из основного тона A, большой терции Db
        и малой терции (чистой квинты от основного тона) E.
    </string>
    <string name="a_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t Ля (A) - основной тон аккорда \n
        \t \t Ре бемоль (Db) - большая терция \n
        \t \t Ми (E) - малая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="em_chord_start">Аккорд Em на гитаре - один из самых простых аккордов, потому что здесь зажимаются всего 2 струны.</string>
    <string name="em_chord_info1">
        Минорное трезвучие образуется из основного тона E, малой терции G
        и большой терции (чистой квинты от основного тона) B.
    </string>
    <string name="em_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t Ми (E) - основной тон аккорда \n
        \t \t Соль (G) - малая терция \n
        \t \t Си (B) - большая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="e_chord_start">Ничего сложного в постановке аккорда E на гитаре нет.</string>
    <string name="e_chord_info1">
        Мажорное трезвучие образуется из основного тона E,
        большой терции G# и малой терции (чистой квинты от основного тона) B.
    </string>
    <string name="e_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t Ми (E) - основной тон аккорда \n
        \t \t Соль диез (G#) - большая терция \n
        \t \t Си (B) - малая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="c_chord_start">Аккорд C - один из основных аккордов, но он достаточно трудный для новичков.</string>
    <string name="c_chord_info1">
        Мажорное трезвучие образуется из основного тона C,
        большой терции E и малой терции (чистой квинты от основного тона) G.
    </string>
    <string name="c_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t До (С) - основной тон аккорда \n
        \t \t Ми (E) - большая терция \n
        \t \t Соль (G) - малая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="cm_chord_start">Аккорд Cm очень сложный аккорд и если вы новичок, то пока лучше обойтись без него.</string>
    <string name="cm_chord_info1">
        Минорное трезвучие образуется из основного тона C,
        малой терции Eb и большой терции (чистой квинты от основного тона) G.
    </string>
    <string name="cm_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t До (С) - основной тон аккорда \n
        \t \t Ми бемоль (Eb) - малая терция \n
        \t \t Соль (G) - большая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="dm_chord_start">Этот аккорд может показаться длинным, но на самом деле он очень прост.</string>
    <string name="dm_chord_info1">
        Минорное трезвучие образуется из основного тона D,
        малой терции F и большой терции (чистой квинты от основного тона) A.
    </string>
    <string name="dm_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t Ре (D) - основной тон аккорда \n
        \t \t Фа (F) - малая терция \n
        \t \t Ля (A) - большая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="d_chord_start">По сути, это тот же самый аккорд Dm с единственным отличием - указательный палец смещен на 1 лад выше.</string>
    <string name="d_chord_info1">
        Мажорное трезвучие образуется из основного тона D,
        большой терции F# и малой терции (чистой квинты от основного тона) A.
    </string>
    <string name="d_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t Ре (D) - основной тон аккорда \n
        \t \t Фа диез (F#) - большая терция \n
        \t \t Ля (A) - малая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="fm_chord_start">По сути, это тот же самый аккорд Dm с единственным отличием - указательный палец смещен на 1 лад выше.</string>
    <string name="fm_chord_info1">
        Минорное трезвучие образуется из основного тона F,
        малой терции G# и большой терции (чистой квинты от основного тона) C.
    </string>
    <string name="fm_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t Фа (F) - основной тон аккорда \n
        \t \t Соль диез (G#) - малая терция \n
        \t \t До (С) - большая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="f_chord_start">В отличие от обычных аккордов здесь придется зажать сразу все струны указательным пальцем на первом ладу.</string>
    <string name="f_chord_info1">
        Мажорное трезвучие образуется из основного тона F,
        большой терции A и малой терции (чистой квинты от основного тона) C.
    </string>
    <string name="f_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t Фа (F) - основной тон аккорда \n
        \t \t Ля (A) - большая терция \n
        \t \t До (С) - малая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="gm_chord_start">Аккорд Gm берется от 3его лада баре. Наверное единственная проблема.</string>
    <string name="gm_chord_info1">
        Минорное трезвучие образуется из основного тона G,
        малой терции Bb и большой терции (чистой квинты от основного тона) D.
    </string>
    <string name="gm_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t Соль (G) - основной тон аккорда \n
        \t \t Си бемоль (Bb) - малая терция \n
        \t \t Ре (D) - большая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="g_chord_start">Аккорд G не такой уж и трудный, но нужна будет какая-никакая растяжка пальцев.</string>
    <string name="g_chord_info1">
        Мажорное трезвучие образуется из основного тона G,
        большой терции B и малой терции (чистой квинты от основного тона) D.
    </string>
    <string name="g_chord_info2">
        Аккорд состоит из трех звуков: \n
        \t \t Соль (G) - основной тон аккорда \n
        \t \t Си (B) - большая терция \n
        \t \t Ре (D) - малая терция (чистая квинта от основного тона аккорда)
    </string>
    <string name="b_chord_start">Это баррэ-аккорд, по звучанию похож чем-то на аккорд H7, но все же не совсем то.</string>
    <string name="b_chord_info1">
        Мажорное трезвучие образуется из основного тона B,
        большой терции Eb и малой терции (чистой квинты от основного тона) F#.
    </string>
    <string name="bust_1">Виды боя на гитаре</string>
    <string name="bust2">Сначала необходимо освоить основные приемы, чтобы на их основе потом сочинять свои композиции. Основные виды боя на гитаре – это шестерка, восьмерка и четверка. Названия определяют количество движений.</string>
    <string name="bust3">
        Характерное звучание определенных мелодий также выделяют как отдельные виды боя на гитаре, например,  популярен испанский бой. Известные исполнители выработали свой стиль игры на гитаре, и их приемы игры стали настолько популярны, что выделяются в отдельные виды гитарного боя. Вы можете подробнее ознакомиться с ними и посмотреть видео, нажав на ссылку ниже.
    </string>
    <string name="bust4">Виды гитарного боя:</string>
    <string name="bust5">Бой «шестерка»</string>
    <string name="bust6">Бой «шестерка с глушением»</string>
    <string name="bust7">Бой «четвёрка»</string>
    <string name="bust8">Бой «восьмёрка»</string>
    <string name="beats1">
        Простые переборы
    </string>
    <string name="beats2">
        Исполнять красивые гитарные переборы довольно просто. Чтобы понять, как играть перебором на гитаре, взгляните на гитарные струны. Гитара имеет три толстые струны, которые отвечают за басовые звуки, и три более тонкие, на которых исполняют мелодическую часть перебора.
    </string>
    <string name="beats3">
        Виды переборов на гитаре:
    </string>
    <string name="beats4">
        Перебор восьмерка на гитаре
    </string>
    <string name="beats5">
        Большой палец ударяет шестую струну, затем указательным, средним и безымянным пальцами поочередно ударяют струны согласно схеме. Восьмеркой перебор называют вследствие того, что гитарист использует восемь движений для его игры.
    </string>
    <string name="beats6">
        Перебор шестерка на гитаре
    </string>
    <string name="beats7">
        Этот перебор используют в огромном количестве песен. Особенно популярен перебор в стиле дворовой песни, баллады и шансона. Кроме того, его иногда используют для игры в стиле блюз.
    </string>
    <string name="beats8">
        Перебор 4 на гитаре
    </string>
    <string name="beats9">
        Очень простой и красивый перебор. Вообще, переборов четверок существует несколько. О них и о некоторых других мы поговорим ниже.
    </string>
    <string name="beats10">
        Схема перебора b12b12
    </string>
    <string name="beats11">
        Это вариация перебора шестерки, которая подразумевает чередование басовых нот.
    </string>
    <string name="beats12">
        Схема перебора четверка: b213
    </string>
    <string name="beats13">
        Еще одна разновидность популярного и простого перебора четверка. Как мы видим из схемы, гитарист играет вторую, третью и первую струну поочередно.
    </string>
    <string name="beats14">
        Схема перебора b3213
    </string>
    <string name="beats15">
        Это усложненная версия перебора четверки. Третье движение пальцами музыканта подразумевает одновременное взятие второй и первой струны. Можете быть уверены, если все сделать правильно - звучать будет потрясающе.
    </string>
</resources>