<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/guitar_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/conteiner1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/conteiner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/conteiner3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_stroke_white_press_blue"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/Back"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/conteiner4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bust_1"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bust2"
                        android:textSize="23sp"
                        android:layout_below="@+id/textView"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bust3"
                        android:textSize="23sp"
                        android:layout_below="@+id/textView2"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bust4"
                        android:textSize="25sp"
                        android:layout_below="@+id/textView6"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bust5"
                        android:textSize="23sp"
                        android:layout_below="@+id/textView7"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="202dp"
                        android:layout_below="@+id/textView8"
                        app:srcCompat="@drawable/bust1" />
                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bust6"
                        android:textSize="23sp"
                        android:layout_below="@+id/imageView5"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="202dp"
                        android:layout_below="@+id/textView9"
                        app:srcCompat="@drawable/bust2" />
                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bust7"
                        android:textSize="23sp"
                        android:layout_below="@+id/imageView6"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="202dp"
                        android:layout_below="@+id/textView10"
                        app:srcCompat="@drawable/bust3" />
                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bust8"
                        android:textSize="23sp"
                        android:layout_below="@+id/imageView7"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="match_parent"
                        android:layout_height="202dp"
                        android:layout_below="@+id/textView11"
                        app:srcCompat="@drawable/bust4" />



                </RelativeLayout>



            </ScrollView>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>